data/derived/comb/progs/unify/prog2363.ml.out
Characters 7-8:
  test a x;;
         ^
Error: This expression has type int -> int
       but an expression was expected of type int
